--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: #FEBCC8;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +11,45 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.wrapper-section{
+  background-color: #FEBCC8;
+  padding:12px
+}
+.wrapper-section p{
+  background-color: #FEBCC8;
+}
+
+.genre-list{
+  list-style-type: none;
+  background-color: #EAEBFF;
+  padding:12px;
+  display: inline-block;
+}
+
+.star {
+  margin: 2px;
+}
+
+.unstarred {
+  color:grey;
+}
+
+.starred {
+  color:#FFFFD8;
+}
+
+.genre-item{
+  cursor: pointer;
+  margin:5px;
+  padding:3px;
+  background-color: #D3EEFF;
+  width:200px;
+  text-align: center;
+  transition: background-color 0.5s ease;
+}
+
+.genre-item:hover{
+  background-color: #E0FEFE;
 }
